<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mi Aplicación</string>
    <string name="practica_1_saludo">Bienvenido a la Práctica 1</string>
    <string name="txtNombre">Ingrese su nombre</string>
    <string name="btnPulsar">Pulsar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="alumno">Alan Albino Tellez Giron Lizarraga</string>
    <string name="matricula">22050381</string>
    <string name="materia">programacion movil</string>
    <string name="altura">Captura tu altura</string>
    <string name="peso">Captura tu peso</string>
    <string name="msj">Su resultado Aparece aqui¡</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="far">Farenheid</string>
    <string name="cel">Celcius</string>
    <string name="cantidad">Ingresar Cantidad:</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="res">Resultado</string>
    <string-array name="array_conversiones">
        <item> Pesos Mexicanos - Dolares Americanos</item>
        <item> Pesos Mexicanos - Dolares Canadienses</item>
        <item> Pesos Mexicanos - Euros</item>
        <item> Dolares Americanos - Pesos Mexicanos</item>
        <item> Dolares Canadienses - Pesos Mexicanos</item>
        <item> Euros - Pesos Mexicanos</item>
        <item>Terminar aplicación</item>
    </string-array>
    <string name="dolara">19.75</string>
    <string name="dolarc">14.75</string>
    <string name="euro">22.02</string>
    <string name="domicilio">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlan Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripcion del Automovil</string>
    <string name="precio">Valor del Automovil</string>
    <string name="po">Porcentaje del Pago inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>

</resources>
