<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">
        <TextView
            android:id="@+id/tvSaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/practica_1_saludo"
            android:textSize="30sp"
            android:textColor="@color/violeta"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center" />
        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingBottom="10sp">
        </EditText>
        <Button
            android:id="@+id/btnPulsar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/btnPulsar">

        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLimpiar"
            android:text="@string/btnLimpiar"
            android:paddingBottom="10sp">
        </Button>
        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnCerrar"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/Pink"
            android:padding="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>